# biosim-2023

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: flake8.yml  lint.yml  pylint.yml
docs/: biosim.rst  conf.py  index.rst  modules.rst
examples/: README.md  analyze_data.py  check_sim.py  sample_sim.py  simulation_hc.py  simulation_hc_changed_params.py  simulation_ho.py  simulation_migration.py  simulation_migration_default_params.py  simulation_visual.py
reference_examples/: check_sim.py  mono_hc.py  mono_ho.py  sample_sim.py
src/biosim/: __init__.py  simulation.py  visuals.py
src/biosim/ecosystem/: __init__.py  fauna.py  geography.py  rossumoya.py  unit_area.py
src/biosim/exception/: BadInputException.py  NotToBeUsedException.py
src/biosim/model/: Cell.py  Fauna.py  Geography.py  Parameters.py  Rossumoya.py  UnitArea.py  World.py  fauna.py  geography.py  rossumoya.py  unit_area.py
src/biosim/visualization/: visuals.py
tests/: README.md  test_fauna.py  test_geography.py  test_parameters.py  test_rossumoya.py  test_simulation.py  test_unit_area.py
